# solana-vault-standard

./: .gitignore  Anchor.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README.md  package.json
.claude/: settings.json
docs/: ARCHITECTURE.md  CLI.md  CONSTANTS.md  MODULES.md  PRIVACY.md  README.md  SDK.md  SVS-1.md  SVS-2.md  SVS-3.md  SVS-4.md  TESTING.md  plan-cli.md  specs-SVS05.md  specs-SVS06.md  specs-SVS07.md  specs-SVS08.md  specs-SVS09.md  specs-SVS11.md  specs-SVS12.md
modules/svs-module-hooks/: Cargo.toml
modules/svs-module-hooks/src/: error.rs  hooks.rs  lib.rs  state.rs
programs/svs-1/: Cargo.toml
programs/svs-1/src/: error.rs  lib.rs  state.rs
programs/svs-1/src/instructions/: admin.rs  deposit.rs  initialize.rs  mint.rs  redeem.rs  withdraw.rs
programs/svs-2/: Cargo.toml
programs/svs-2/src/: error.rs  lib.rs  state.rs
programs/svs-2/src/instructions/: admin.rs  deposit.rs  mint.rs  redeem.rs  view.rs  withdraw.rs
programs/svs-3/: Cargo.toml
programs/svs-3/src/: lib.rs  state.rs
programs/svs-3/src/instructions/: deposit.rs  mint.rs  redeem.rs  view.rs  withdraw.rs
programs/svs-4/: Cargo.toml
programs/svs-4/src/: error.rs  lib.rs  state.rs
programs/svs-4/src/instructions/: deposit.rs  mint.rs  redeem.rs  withdraw.rs
programs/svs-7/: Cargo.toml
programs/svs-7/src/: constants.rs  error.rs  events.rs  lib.rs  math.rs  state.rs
programs/svs-7/src/instructions/: admin.rs  deposit_sol.rs  deposit_wsol.rs  initialize.rs  mint_sol.rs  mod.rs  module_admin.rs  redeem_sol.rs  redeem_wsol.rs  sync.rs  view.rs  withdraw_sol.rs  withdraw_wsol.rs
proofs-backend/src/: main.rs  types.rs
proofs-backend/src/routes/: proofs.rs
proofs-backend/src/services/: proof_generator.rs
scripts/: README.md  health-check.ts  qa.sh  smoke-test.ts  vault-info.ts
sdk/core/: README.md  package.json
sdk/core/src/: cli.ts  index.ts  managed-vault.ts  sol-vault.ts  vault.ts
sdk/core/src/cli/: types.ts  utils.ts
sdk/core/src/cli/commands/admin/: sync.ts
sdk/core/src/cli/commands/confidential/: index.ts
sdk/core/src/cli/commands/config-cmd/: index.ts
sdk/core/src/cli/commands/operate/: deposit.ts  withdraw.ts
sdk/core/src/cli/config/: schema.ts  vault-aliases.ts
sdk/core/tests/: cli.test.ts
sdk/privacy/: README.md  package.json
sdk/privacy/src/: confidential-vault.ts
tests/: admin-extended.ts  modules.ts  svs-2.ts  svs-3.ts  svs-4.ts  svs-7.ts
tests/helpers/: proof-client.ts
trident-tests/fuzz_0/: test_fuzz.rs
