[package]
name = "svs-2"
version = "0.1.0"
description = "SVS-2: Solana Vault Standard - Stored balance with sync, ERC-4626 equivalent for Solana"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "svs_2"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
modules = ["svs-module-hooks", "svs-fees", "svs-caps", "svs-locks", "svs-access", "svs-rewards"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "associated_token", "metadata"] }
spl-token-2022 = "6.0.0"
spl-token-metadata-interface = "0.5.1"
constant_time_eq = { workspace = true }
blake3 = { workspace = true }
svs-math = { path = "../../modules/svs-math" }
svs-module-hooks = { path = "../../modules/svs-module-hooks", optional = true }
svs-fees = { path = "../../modules/svs-fees", optional = true }
svs-caps = { path = "../../modules/svs-caps", optional = true }
svs-locks = { path = "../../modules/svs-locks", optional = true }
svs-access = { path = "../../modules/svs-access", optional = true }
svs-rewards = { path = "../../modules/svs-rewards", optional = true }
