[package]
name = "svs-4"
version = "0.1.0"
description = "SVS-4: Private Solana Vault Standard (Beta) - Confidential tokenized vault with encrypted share balances, with sync support"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "svs_4"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
modules = ["svs-module-hooks", "svs-fees", "svs-caps", "svs-locks", "svs-access", "svs-rewards"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "associated_token", "metadata"] }
spl-token-2022 = "6.0.0"
spl-token-metadata-interface = "0.5.1"
spl-token-confidential-transfer-proof-extraction = "0.2.1"
spl-pod = "0.4"
solana-zk-sdk = "2.1.0"
bytemuck = "1.14"
constant_time_eq = { workspace = true }
blake3 = { workspace = true }
svs-math = { path = "../../modules/svs-math" }
svs-fees = { path = "../../modules/svs-fees", optional = true }
svs-caps = { path = "../../modules/svs-caps", optional = true }
svs-locks = { path = "../../modules/svs-locks", optional = true }
svs-access = { path = "../../modules/svs-access", optional = true }
svs-rewards = { path = "../../modules/svs-rewards", optional = true }
svs-module-hooks = { path = "../../modules/svs-module-hooks", optional = true }
